# cat-backend

./: Dockerfile  README.md  main.py  pyproject.toml  weav-lama_beta.py
doc/: alembic-migrations.md
notebook/: rab_lab.ipynb  requirements.txt
src/: main.py
src/core/: db.py  settings.py  supervisord.conf  util.py
src/front/: router.py
src/llm/: ollama_util.py  router.py
src/migrations/: env.py
src/migrations/versions/: 5db4579c8afc_initial.py
src/models/: cat_public.py
src/notebook/: README.md  weav-lama.py
src/vectordb/: router.py  weaviate_vdb.py
